frontend/test/should_fail/index_pattern_edge_missing_where_index_expected.grg
#using "index_multiple_model.gm"

rule i(ref s:set<int>) {
	-e:E{ascending(s >= 0, s <= 1)}->;
	
	modify {
	}
}
